@@ -6,6 +6,7 @@ or Subversion repository revision (rxxx).
 CheckSum Tool 0.5.0
   New toolbar/menuitem icons from famfamfam.com (#1883992)
   Add second toolbar for checksum-related buttons
+  Bugfix: Fix updating item count in the statusbar.
 
 CheckSum Tool 0.4.0 - 2008-02-05 (r158)
   Add Select All to Edit-menu (also CTRL+A shortcut key)
